# OtterNote

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/: technical-plan.md  ui-design.md
src/: id.ts  main.tsx  storage.ts  store.ts  styles.css  todo-parser.test.ts  todo-parser.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
