[package]
name = "otter-note"
version = "0.1.0"
description = "Lightweight local-first notes and todo app"
authors = ["OtterNote"]
edition = "2021"

[lib]
name = "otter_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
